--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Odin's Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
     <a href="recipes/pizza.html">Pizza Recipe</a>
-    <a href="recipes/tacos.html">Tacos Reciper</a>
+    <a href="recipes/tacos.html">Tacos Recipe</a>
 </body>
 </html>
